--- a/estructura de archivos/admin/src/App.css
+++ b/estructura de archivos/admin/src/App.css
@@ -4784,7 +4784,15 @@ input[type=submit].btn-block {
 
 .card-body {
   flex: 1 1 auto;
-  padding: 0.5rem
+  padding: 0.5rem;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.card-body:hover {
+  overflow: visible;
+  white-space: normal;
 }
 
 .card-title {
@@ -6829,6 +6837,13 @@ button.bg-dark:hover {
   /* background-color: #fff !important */
   background-color: #858796;
   background-image: linear-gradient(90deg, #36393f 25%, #202225 100%);
+  background-size: cover
+}
+
+.bg-white-footer {
+  /* background-color: #fff !important */
+  background-color: #858796;
+  background-image: linear-gradient(225deg, #36393f 25%, #202225 100%);
   background-size: cover
 }
 
@@ -10689,16 +10704,15 @@ a:focus {
 
 #wrapper #content-wrapper {
   /* background-color: #f8f9fc;
-  width: 100%;
   overflow-x: hidden */
   width: 100%;
-    height: 100vh;
-    background-image: url(../public/DALF-LOGO-BACKGROUND5blur.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-attachment: fixed;
-    position: relative;
+  /* height: 100vh; */
+  background-image: url(../public/DALF-LOGO-BACKGROUND5blur.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+  position: relative;
 }
 
 #wrapper #content-wrapper #content {
@@ -12257,7 +12271,8 @@ footer.sticky-footer {
 
 footer.sticky-footer .copyright {
   line-height: 1;
-  font-size: .8rem
+  font-size: .8rem;
+  color: rgba(255, 255, 255, .8);
 }
 
 body.sidebar-toggled footer.sticky-footer {
