--- a/estructura de archivos/src/views/partials/header.ejs
+++ b/estructura de archivos/src/views/partials/header.ejs
@@ -17,7 +17,7 @@
                     </form>
 
                     <button>
-                        <a  data-bs-toggle="modal" data-bs-target="#cartModal"><i class="fa-solid fa-cart-shopping"></i></a>
+                        <a id="cartModal2" data-bs-toggle="modal" data-bs-target="#cartModal"><i class="fa-solid fa-cart-shopping"></i></a>
                     </button>
                     <li class="nav-item dropdown header__top--login">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
