--- a/estructura de archivos/src/views/products/productDetail.ejs
+++ b/estructura de archivos/src/views/products/productDetail.ejs
@@ -36,7 +36,8 @@
                             </div>  
                             <article class="detail__purchase__buttons">
                                 <div class="detail__purchase__buttons--cart">
-                                    <button type="submit" name="cart"><i class="fa-solid fa-cart-shopping"></i> Agregar al carrito</button>
+                                    <button type="submit" name="cart"class="btn btn-primary" onclick="addCartItem('<%=product.id%>')"><i class="fa-solid fa-cart-shopping"></i>Agregar al carrito</button>
+
                                 </div>
                                 <div class="detail__purchase__buttons--fav">
                                     <button type="submit" name="favorites"><i class="fa-solid fa-heart"></i> Agregar a favoritos</button>
