--- a/estructura de archivos/src/views/partials/modalCart.ejs
+++ b/estructura de archivos/src/views/partials/modalCart.ejs
@@ -3,7 +3,7 @@
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
         <div class="modal-header">
-          <h1 class="modal-title fs-5" id="cartModalLabel">Mi Compra</h1>
+          <h1 class="modal-title fs-5" id="cartModalLabel">Carrito de compras</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body" id="box-cart">
