--- a/estructura de archivos/src/views/products/productDetail.ejs
+++ b/estructura de archivos/src/views/products/productDetail.ejs
@@ -3,7 +3,7 @@
 
     <%- include('../partials/head',{ title:'Detail', }) %>
 
-        <body>
+        <body class="body-productDetail">
             <!-- Header -->
             <%- include('../partials/header')%>
                 <!-- /Header -->
@@ -125,16 +125,12 @@
                         <div class="product-imgs"></div>
                         <div class="img-display">
                             <div class="img-showcase">
-                                <img src="/images/products/<%=
-                                    product.image.length> 0 ?
-                                product.image[0].file :
-                                "default-product-image.jpg" %>" alt="product">
+                                <img src="/images/products/<%= product.image.length> 0 ? product.image[0].file : "default-product-image.jpg" %>" alt="product">
                             </div>
                         </div>
                         <!-- card right -->
                         <div class="product-content">
-                            <h2 class="product-title">Keys</h2>
-                            <a href="#" class="product-link">Visit Dalf-Store</a>
+                            <h2 class="product-title"><%= product.name %></h2>
                             <div class="product-rating">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -143,17 +139,62 @@
                                 <i class="fas fa-star-half-alt"></i>
                                 <span>4.7(21)</span>
                             </div>
+                            <% if (product.discount > 0) { %>
                             <div class="product-price">
-                                <p class="last-price">Old price: <span>$500.00</span></p>
-                                <p class="new-price">New Price <span>$300.00 (5%)</span></p>
+                                <p class="last-price">Old price: $ <span><%= product.price %></span></p>
+                                <div class="price-discount">
+                                <p class="new-price">New Price: $ <span><%= (product.price) - (product.price * product.discount / 100)%></span></p>
+                                <% }else{ %>
+                                    <p class="price">$ <%= product.price %></p>
+                                    <% } %>
+                                    <% if (product.discount > 0) { %>
+                                    <p class="discount"><%= product.discount %>% OFF</p>
+                                    <% } %>
+                                </div>
                             </div>
                             <div class="product-detail">
-                                <h2>about this item:</h2>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam similique aliquam odio recusandae tempora, aut saepe perferendis sed dolor eligendi alias ratione tempore! Error officia dolor architecto ab voluptatem cum.</p>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam similique aliquam odio recusandae tempora, aut saepe perferendis sed dolor eligendi alias ratione tempore! Error officia dolor architecto ab voluptatem cum.</p>
+                                <h2>Acerca de este artículo:</h2>
                                 <ul>
-                                    
+                                    <li>Disponibilidad: <span>en stock</span></li>
+                                    <li>categoría: <span>accion</span></li>
+                                    <li>Área de envío: <span>Toda Argentina</span></li>
+                                    <li>Gastos de envío: <span>Gratis</span></li>
                                 </ul>
+                            </div>
+
+                            <div class="purchase-info">
+                                <input type="number" min="0" value="1"> 
+                                <button type="button" class="btn">
+                                    Agregar al carrito <i class="fas fa-shopping-cart"></i>
+                                </button>
+                                <button type="button" class="btn">
+                                    Comprar ahora
+                                </button>
+                                <div class="social-links">
+                                    <p>Compartir:</p>
+                                    <a href="#">
+                                        <i class="fab fa-facebook"></i>
+                                    </a>
+                                    <a href="#">
+                                        <i class="fab fa-twitter"></i>
+                                    </a>
+                                    <a href="#">
+                                        <i class="fab fa-instagram"></i>
+                                    </a>
+                                    <a href="#">
+                                        <i class="fab fa-whatsapp"></i>
+                                    </a>
+                                    <a href="#">
+                                        <i class="fab fa-discord"></i>
+                                    </a>
+                                </div>
+                                <div>
+                                    <h2>Descripción:</h2>
+                                    <div>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam similique aliquam odio recusandae tempora, aut saepe perferendis sed dolor eligendi alias ratione tempore! Error officia dolor architecto ab voluptatem cum.</p>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam similique aliquam odio recusandae tempora, aut saepe perferendis sed dolor eligendi alias ratione tempore! Error officia dolor architecto ab voluptatem cum.</p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -204,9 +245,10 @@
                         }]
                     })
                 })
-            </script>
+                    </script>
                     <script src="../../../javascripts/alerts.js"></script>
                     <!-- /script -->
                 </body>
 
             </html>
+
