search validations PD()

--- a/estructura de archivos/src/views/index.ejs
+++ b/estructura de archivos/src/views/index.ejs
@@ -74,7 +74,7 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
-        <h2>Juegos Recomendados (Digitales)</h2>
+        <h2>Juegos Recomendados</h2>
         <section class="main__section--product ">
             <% productsRecommended.forEach(({id, name, price, image, discount})=> { %>
                 <%- include("./partials/product",{id, name, price, image, discount, toThousand }) %>
