--- a/estructura de archivos/src/views/partials/header.ejs
+++ b/estructura de archivos/src/views/partials/header.ejs
@@ -9,8 +9,8 @@
                 </button>
                 <a class="header--figure-logo" href="/"><img src="/images/DALF-LOGO.png" alt="" /></a>
                 <div class="header__top--general-navigation_button">
-                    <form action="/search" method="GET" class="header__top--search">
-                        <input type="text" name="keywords" placeholder="Buscar" required />
+                    <form action="/search" method="GET" class="header__top--search" id="search-header">
+                        <input type="text" name="keywords" placeholder="Buscar" id="search-header-input"/>
                         <div class="header__top--search-button">
                             <i class="fa-solid fa-magnifying-glass icon"></i>
                         </div>
@@ -54,42 +54,6 @@
                                     <i class="fa-solid fa-magnifying-glass icon"></i>
                                 </div>
                             </form>
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">TIENDA</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">JUEGOS</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">TARJETAS DE REGALO</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">XBOX</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">SOWFTWARE</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">LISTA DE DESEOS</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="/products/productsLoad"></i> Agregar producto
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Español Latinoamerica | ARS</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="header_div">
-                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 header_div--navbar-desktop">
-                    
-                            <!--<li class="nav-item">
-                                 Tienda 
-                                <a class="nav-link active" aria-current="page" href="#">Tienda</a>
-                            </li>-->
                             <li class="nav-item dropdown">
                                 <!-- Juegos -->
                                 <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
@@ -108,40 +72,6 @@
                                     </li>
                                 </ul>
                             </li>
-                            <!--<li class="nav-item dropdown">
-                                 Tarjeta de regalo 
-                                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
-                                    aria-expanded="false">Tarjeta de regalo</a>
-                                <ul class="dropdown-menu tarjetaDeRegalo__move">
-                                    <li>
-                                        <small class="title__nav_item" style="margin-left: 1px">Lista de tarjetas de
-                                            regalo</small>
-                                        <ul class="cointeiner__links_nav_item" style="list-style: none">
-                                            <li><a class="dropdown-item" href="#">Steam Tarjetas</a></li>
-                                            <li>
-                                                <a class="dropdown-item" href="#">Xbox Live Tarjetas</a>
-                                            </li>
-                                            <li><a class="dropdown-item" href="#">PSN Juegos</a></li>
-                                            <li><a class="dropdown-item" href="#">PSN Tarjetas</a></li>
-                                            <li>
-                                                <a class="dropdown-item" href="#">Tarjetas pavos de Fortnite</a>
-                                            </li>
-                                            <li>
-                                                <a class="dropdown-item" href="#">Roblox Robux Tarjetas</a>
-                                            </li>
-                                            <li>
-                                                <a class="dropdown-item" href="#">Blizzard Tarjetas</a>
-                                            </li>
-                                            <li>
-                                                <a class="dropdown-item" href="#">Google Play Tarjetas</a>
-                                            </li>
-                                            <li>
-                                                <a class="dropdown-item" href="#">Otras tarjetas de regalo</a>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </li>-->
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
                                     aria-expanded="false">Categorias</a>
@@ -155,24 +85,6 @@
                                         <% }) %>
                                 </ul>
                             </li>
-                            <!--<li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
-                                    aria-expanded="false">Secciones</a>
-                                <ul class="dropdown-menu cointeiner__links_nav_item">
-                                    <small class="title__nav_item" style="margin-left: -20px">Secciones</small>
-                                    <% sections.forEach(section=> { %>
-                                        <li>
-                                            <a class="dropdown-item" href="/section/<%= section.id %>">
-                                                <%= section.name %>
-                                            </a>
-                                        </li>
-                                        <% }) %>
-                                </ul>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" style="font-size: 14px" aria-current="page" href="#">Español
-                                    | ARS</a>
-                            </li>-->
                             <li class="nav-item">
                                 <a class="nav-link active"  aria-current="page" href="/section/1">Ofertas</a>
                             </li>
@@ -189,9 +101,77 @@
                                     </a>
                                 </li>
                                 <% } %>
+                            
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <!----------------------------------------------------pc--------------------------------------------------------->
+            <div class="header_div">
+                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 header_div--navbar-desktop">
+                    
+                            
+                            <li class="nav-item dropdown">
+                                <!-- Juegos -->
+                                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
+                                    aria-expanded="false">Plataformas</a>
+                                <ul class="dropdown-menu menu_dropdown">
+                                    <li>
+                                        <ul class="cointeiner__links_nav_item" style="list-style: none">
+                                            <% brands.forEach(brand=> { %>
+                                                <li>
+                                                    <a class="dropdown-item" href="/brand/<%= brand.id %>">
+                                                        <%= brand.name %>
+                                                    </a>
+                                                </li>
+                                                <% }) %>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </li>
+                            
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
+                                    aria-expanded="false">Categorias</a>
+                                <ul class="dropdown-menu cointeiner__links_nav_item">
+                                    <% categories.forEach(category=> { %>
+                                        <li>
+                                            <a class="dropdown-item" href="/categorias/<%= category.id %>">
+                                                <%= category.name %>
+                                            </a>
+                                        </li>
+                                        <% }) %>
+                                </ul>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active"  aria-current="page" href="/section/1">Ofertas</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active"  aria-current="page" href="/section/2">Recomendados</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active"  aria-current="page" href="/section/2">Explorar</a>
+                            </li>
+                            <% if (locals.userLogin && userLogin.rol === 1) { %>
+                                <li class="nav-item">
+                                    <!--  Creación de producto -->
+                                    <a class="nav-link active" aria-current="page" href="/products/productsLoad"> Agregar producto
+                                    </a>
+                                </li>
+                                <% } %>
                 </ul>
             </div>
         </nav>
     </div>
 </header>
 <script src="/javascripts/cart.js"></script>
+<script>
+    let inputSearch = document.getElementById('search-header-input')
+    let search = document.getElementById('search-header')
+    search.addEventListener('submit',(e)=>{
+        e.preventDefault()
+        if(inputSearch.value.length > 1){
+            search.submit()
+        }
+    })
+</script>
