--- a/estructura de archivos/public/css/header.css
+++ b/estructura de archivos/public/css/header.css
@@ -122,7 +122,7 @@ h1 {
 
 .header--figure-logo img {
     height: 50px;
-    padding-top: 5px;
+    /* padding-top: 5px; */
     padding-bottom: 5px;
 }
 
