--- a/estructura de archivos/public/css/index.css
+++ b/estructura de archivos/public/css/index.css
@@ -1,15 +1,13 @@
 #index {
     background-color: #36393f;
-    font-family: 'Open Sans', sans-serif;
+    font-family: "Open Sans", sans-serif;
 }
-
 
 /*  H E A D E R */
 
 .header--figure-logo {
     margin: 0 0 0;
 }
-
 
 /* M A I N */
 
@@ -26,10 +24,6 @@
     border-bottom: solid 1px #2b2d32;
     border-radius: 10px 10px 0 0;
     color: #dee2e6;
-}
-
-.main--img-banner {
-    height: 20vh;
 }
 
 #carouselExampleIndicators {
@@ -65,7 +59,7 @@
 }
 
 .main__section--product-article img {
-    width: 100%
+    width: 100%;
 }
 
 .main__section--product-article img:hover {
@@ -82,7 +76,6 @@
     -webkit-line-clamp: 2;
     line-height: 1.5;
 }
-
 
 /*  Corazón / Articulo favorito */
 
@@ -102,10 +95,19 @@
 
 .main__section--product-content_offers {
     background-color: #3d47a0;
-    border-top: solid 1px #2b2d32;
+    border-top: solid 1px #f8f9fc;
     display: flex;
     flex-direction: column;
     padding: 10px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.main__section--product-content_offers:hover {
+    transition: 1s all;
+    overflow: visible;
+    white-space: normal;
 }
 
 .main-section-price-ofert {
@@ -136,7 +138,7 @@
     font-size: 11px;
     color: #b0b2b7;
     padding-left: 5px;
-    width: 100%
+    width: 100%;
 }
 
 .main__section--product-price {
@@ -158,16 +160,25 @@
 }
 
 .main-display-button {
-    margin-bottom: 10px;
-    color: #dee2e6;
-    background-color: #606164;
-    border: solid 1px #2b2d32;
-    border-radius: 5px;
-    border: none;
-    text-align: center;
-    padding-left: 20px;
-    padding-right: 20px;
-    font-size: 17px;
+    width: 200px;
+    height: 50px;
+    padding: 10px;
+    margin: 25px 0 20px;
+    cursor: pointer;
+    background: rgba(255, 255, 255, 0.05);
+    border-image: linear-gradient(to right,
+            var(--C_Lightblue_Logo),
+            var(--C_Pink_Logo)) 1;
+    color: var(--C_Ice-Cream);
+    font-weight: bold;
+    transition: 1s all;
+}
+
+.main-display-button:hover {
+    border-image: linear-gradient(to right,
+            var(--C_Pink_Logo),
+            var(--C_Lightblue_Logo)) 1;
+    color: var(--C_Pink_Logo);
 }
 
 .main-carousel-button {
@@ -185,7 +196,6 @@
     height: 202.8px;
 }
 
-
 /*  F O O T E R */
 
 .footer__lastsection__navbar {
@@ -193,47 +203,87 @@
 }
 
 @media (min-width: 375px)
-/* Mobile */
 
-{
+/* Mobile */
+    {
+
+    .second-carousel--banner {
+        display: none;
+    }
+
     .main__section--product-favorite {
         top: 13px;
         left: 144px;
     }
+
+    .main__section--product-article {
+        width: 100%;
+        height: 39em;
+    }
+
+    .main__section--product-article img {
+        width: 100%;
+        height: /* 50vh */ 32em;
+    }
 }
 
 @media (min-width: 425px)
-/* Mobile */
 
-{
+/* Mobile */
+    {
     .main__section--product-favorite {
         top: 13px;
         left: 170px;
     }
+
+    .main__section--product-article {
+        width: 100%;
+        height: 43em;
+    }
+
+    .main__section--product-article img {
+        width: 100%;
+        height: /* 57vh */ 36em;
+    }
 }
 
 @media (min-width: 768px)
-/* Tablet*/
 
-{
+/* Tablet*/
+    {
+
     /* HEADER */
     /* MAIN */
     #mid {
         padding-top: 58px;
     }
-    .main--img-banner {
-        height: 35vh;
+
+    .second-carousel--banner {
+        display: block;
     }
+
+    .main__section--product-article {
+        width: 50%;
+        height: 38em;
+    }
+
+    .main__section--product-article img {
+        width: 100%;
+        height: 32em;
+    }
+
     .main__section--product {
         width: 100%;
         display: flex;
-        flex-wrap: nowrap;
+        flex-wrap: wrap;
     }
+
     .main__section--product-favorite {
         top: 13px;
         left: 150px;
         display: block;
     }
+
     .main__section--product-description {
         display: block;
         font-size: 15px;
@@ -242,19 +292,29 @@
 }
 
 @media (min-width: 1024px)
-/* Desktop */
 
-{
+/* Desktop */
+    {
+
     /* MAIN */
     .main__content {
         padding-top: 108px;
     }
+
+    .main__section--product {
+        width: 100%;
+    }
+
     .main__section--product-article {
-        width: 20%
+        width: 25%;
+        height: 26em;
     }
-    .main--img-banner {
-        height: 45vh;
+
+    .main__section--product-article img {
+        width: 100%;
+        height: /* 35vh */ 21em;
     }
+
     .main__section--product-favorite {
         top: 15px;
         left: 163px;
@@ -262,25 +322,45 @@
 }
 
 @media (min-width: 1185px) {
+
     /* Desktop */
     .main__section--product-favorite {
         left: 289px;
     }
 }
 
-@media (min-width: 1440px)
-/* Desktop */
+@media (min-width: 1200px) {
 
-{
+    .main__section--product-article {
+        width: 25%;
+        height: 31em;
+    }
+
+    .main__section--product-article img {
+        width: 100%;
+        height: 26em;
+    }
+}
+
+@media (min-width: 1440px)
+
+/* Desktop */
+    {
     .main__section--product {
         width: 100%;
     }
-    .main--img-banner {
-        height: 45vh;
-    }
+
     .main__section--product-article {
-        width: 17%;
+        width: 18%;
+        height: 27em;
+        padding: 5px;
     }
+
+    .main__section--product-article img {
+        width: 100%;
+        height: 22em;
+    }
+
     .main__section--product-favorite {
         top: 19px;
         left: 200px;
@@ -288,10 +368,31 @@
 }
 
 @media (min-width: 1680px) {
-    .main--img-banner {
-        height: 55vh;
-    }
+
     .main__section--product-favorite {
         left: 283px;
     }
+}
+
+@media (min-width: 1920px) {
+
+    .main__section--product {
+        width: 100%;
+    }
+
+    .main__section--product-article {
+        width: 12%;
+        height: 24em;
+        padding: 5px;
+    }
+
+    .main__section--product-article img {
+        width: 100%;
+        height: 19em;
+    }
+
+    .main__section--product-img-key {
+        width: 50%;
+    }
+
 }
