--- a/estructura de archivos/public/css/header.css
+++ b/estructura de archivos/public/css/header.css
@@ -5,6 +5,91 @@
     background-color: #343a40;
 }
 
+/** NEW SEARCHBAR */
+
+.header--searchbar {
+    position: absolute;
+    top: 28%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    transition: all 1s;
+    width: 35px;
+    height: 35px;
+    background: white;
+    box-sizing: border-box;
+    border-radius: 25px;
+    border: 4px solid var(--C_Lightblue_Logo);
+    padding: 5px;
+}
+
+.header__searchbar--input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;;
+    height: 25.5px;
+    line-height: 30px;
+    outline: 0;
+    border: 0;
+    display: none;
+    font-size: 1em;
+    border-radius: 20px;
+    padding: 0 15px;
+    background-color: white;
+}
+
+.header--searchbar i {
+    box-sizing: border-box;
+    padding: 5px;
+    width: 28.5px;
+    height: 26.5px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    border-radius: 50%;
+    color: #212529;
+    text-align: center;
+    font-size: 0.8em;
+    transition: all 1s;
+}
+
+.header--searchbar:hover,
+.header--searchbar:valid{
+    width: 300px;
+    cursor: pointer;
+}
+
+.header--searchbar:hover input,
+.header--searchbar:valid input{
+    display: block;
+}
+
+.header--searchbar:hover .fa,
+.header--searchbar:valid .fa{
+    background: #212529;
+    /* transform: rotate(1080deg); */
+    transform: rotate(3turn);
+    color: white;
+
+}
+
+.header--searchbar a {
+    display: none;
+    position: absolute;
+    top: 70px;
+    bottom:0;
+    left: 0;
+    right: 0;
+    font-size: 20px;
+    color: var(--C_Ice-Cream);
+    text-align: center; 
+    width: 100%;
+}
+
+.header--searchbar:valid a {
+    display: block;
+}
+
 /*  HEADER  GENREAL*/
 
 #top {
@@ -207,10 +292,19 @@ h1 {
     background-color: var(--C_Discord)
 }
 
+@media (min-width: 375px) {
+    .header--searchbar {
+        display: none;
+    }
+}
+
+
 @media (min-width: 1024px) {
     /* Desktop */
 
-
+    .header--searchbar {
+        display: block;
+    }
 
     .navbar-nav .dropdown-menu{
         position: absolute;
