--- a/estructura de archivos/src/views/partials/header.ejs
+++ b/estructura de archivos/src/views/partials/header.ejs
@@ -8,11 +8,10 @@
                 </button>
                 <a class="header--figure-logo" href="/"><img src="/images/DALF-LOGO.png" alt="" /></a>
                 <div class="header__top--general-navigation_button">
-                    <form action="/search" method="GET" class="header__top--search">
-                        <input type="text" name="keywords" placeholder="Buscar" required />
-                        <div class="header__top--search-button">
-                            <i class="fa-solid fa-magnifying-glass icon"></i>
-                        </div>
+                    
+                    <form action="/search" method="GET" class="header--searchbar">
+                        <input type="text" class="header__searchbar--input" name="keywords" placeholder="Buscá tu juego..." required />
+                            <i class="fa fa-search"></i>
                     </form>
 
                     <button>
