--- a/estructura de archivos/src/views/partials/product.ejs
+++ b/estructura de archivos/src/views/partials/product.ejs
@@ -3,12 +3,8 @@
     <article>
         <img class="main__section--product-img-key" src="/images/products/<%= image[0] ? image[0].file : 'default-product-image.jpg' %>" alt="xbox-key ">
         <div class="main__section--product-content_offers">
-            <!-- <div class="main-section-global-region">
-                <p class="main__section--product-region">Argentina</p>
-                <p class="main__section--product-ubication">Desde</p>
-            </div> -->
             <div class="main-section-price-ofert">
-                <p class="main__section--product-price">$<%= price %></p>
+                <p class="main__section--product-price">$<%= price - price * discount / 100%></p>
                 <% if (discount> 0) { %>
                 <p class="main__section--product-discount"><%= discount %>% OFF</p>
                 <% } %>
