--- a/estructura de archivos/src/views/partials/header.ejs
+++ b/estructura de archivos/src/views/partials/header.ejs
@@ -29,9 +29,9 @@
                                 </li>
                                 <li><a class="dropdown-item" href="/users/logout">Salir</a></li>
                                 <% } else { %>
-                                    <li><a class="dropdown-item" href="/users/login">Login</a></li>
+                                    <li><a class="dropdown-item" href="/users/login">Ingresar</a></li>
                                     <li>
-                                        <a class="dropdown-item" href="/users/register">Register</a>
+                                        <a class="dropdown-item" href="/users/register">Registrarme</a>
                                     </li>
                                     <% } %>
                         </ul>
