--- a/estructura de archivos/src/views/partials/product.ejs
+++ b/estructura de archivos/src/views/partials/product.ejs
@@ -8,6 +8,7 @@
                 <% if (discount> 0) { %>
                 <p class="main__section--product-discount"><%= discount %>% OFF</p>
                 <% } %>
+                <i class="fa-solid fa-cart-shopping"></i>
             </div>
             <p class="main__section--product-description"><%= name %></p>
         </div>
