--- a/estructura de archivos/src/views/partials/header.ejs
+++ b/estructura de archivos/src/views/partials/header.ejs
@@ -89,21 +89,16 @@
                                 <a class="nav-link active" aria-current="page" href="#">Tienda</a>
                             </li>-->
                             <li class="nav-item dropdown">
-                                <!-- Juegos -->
                                 <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
                                     aria-expanded="false">Plataformas</a>
-                                <ul class="dropdown-menu menu_dropdown">
-                                    <li>
-                                        <ul class="cointeiner__links_nav_item" style="list-style: none">
-                                            <% brands.forEach(brand=> { %>
-                                                <li>
-                                                    <a class="dropdown-item" href="/brand/<%= brand.id %>">
-                                                        <%= brand.name %>
-                                                    </a>
-                                                </li>
-                                                <% }) %>
-                                        </ul>
-                                    </li>
+                                <ul class="dropdown-menu cointeiner__links_nav_item">
+                                    <% brands.forEach(brand=> { %>
+                                        <li>
+                                            <a class="dropdown-item" href="/brand/<%= brand.id %>">
+                                                <%= brand.name %>
+                                            </a>
+                                        </li>
+                                        <% }) %>
                                 </ul>
                             </li>
                             <!--<li class="nav-item dropdown">
